@@ -108,13 +108,13 @@ rsvg_size_callback (int *width,
 }
 
 static GdkPixbuf *
-rsvg_pixbuf_from_file_with_size_data (const gchar * file_name,
+rsvg_pixbuf_from_file_with_size_data (RsvgHandle * handle,
+									  const gchar * file_name,
 									  struct RsvgSizeCallbackData * data,
 									  GError ** error)
 {
 	char chars[SVG_BUFFER_SIZE];
 	GdkPixbuf *retval;
-	RsvgHandle *handle;
 	gint result;
 	FILE *f = fopen (file_name, "r");
 
@@ -124,8 +124,6 @@ rsvg_pixbuf_from_file_with_size_data (const gchar * file_name,
 			return NULL;
 		}
 	
-	handle = rsvg_handle_new ();
-	
 	rsvg_handle_set_size_callback (handle, rsvg_size_callback, data, NULL);
 
 	while ((result = fread (chars, 1, SVG_BUFFER_SIZE, f)) > 0)
@@ -134,10 +132,171 @@ rsvg_pixbuf_from_file_with_size_data (const gchar * file_name,
 	rsvg_handle_close (handle, error);
 	retval = rsvg_handle_get_pixbuf (handle);
 	
-	fclose (f);
-	rsvg_handle_free (handle);
-	
+	fclose (f);	
 	return retval;
+}
+
+/**
+ * rsvg_pixbuf_from_file_at_size_ex:
+ * @handle: The RSVG handle you wish to render with (either normal or gzipped)
+ * @file_name: A file name
+ * @width: The new width, or -1
+ * @height: The new height, or -1
+ * @error: return location for errors
+ * 
+ * Loads a new #GdkPixbuf from @file_name and returns it.  This pixbuf is scaled
+ * from the size indicated to the new size indicated by @width and @height.  If
+ * either of these are -1, then the default size of the image being loaded is
+ * used.  The caller must assume the reference to the returned pixbuf. If an
+ * error occurred, @error is set and %NULL is returned. Returned handle is closed
+ * by this call and must be freed by the caller.
+ * 
+ * Return value: A newly allocated #GdkPixbuf, or %NULL
+ **/
+static GdkPixbuf  *
+rsvg_pixbuf_from_file_at_size_ex (RsvgHandle * handle,
+								  const gchar  *file_name,
+								  gint          width,
+								  gint          height,
+								  GError      **error)
+{
+	struct RsvgSizeCallbackData data;
+	
+	data.type = RSVG_SIZE_WH;
+	data.width = width;
+	data.height = height;
+	
+	return rsvg_pixbuf_from_file_with_size_data (handle, file_name, &data, error);
+}
+
+/**
+ * rsvg_pixbuf_from_file_ex:
+ * @handle: The RSVG handle you wish to render with (either normal or gzipped)
+ * @file_name: A file name
+ * @error: return location for errors
+ * 
+ * Loads a new #GdkPixbuf from @file_name and returns it.  The caller must
+ * assume the reference to the reurned pixbuf. If an error occurred, @error is
+ * set and %NULL is returned. Returned handle is closed by this call and must be
+ * freed by the caller.
+ * 
+ * Return value: A newly allocated #GdkPixbuf, or %NULL
+ **/
+static GdkPixbuf  *
+rsvg_pixbuf_from_file_ex (RsvgHandle * handle,
+						  const gchar  *file_name,
+						  GError      **error)
+{
+	return rsvg_pixbuf_from_file_at_size_ex (handle, file_name, -1, -1, error);
+}
+
+/**
+ * rsvg_pixbuf_from_file_at_zoom_ex:
+ * @handle: The RSVG handle you wish to render with (either normal or gzipped)
+ * @file_name: A file name
+ * @x_zoom: The horizontal zoom factor
+ * @y_zoom: The vertical zoom factor
+ * @error: return location for errors
+ * 
+ * Loads a new #GdkPixbuf from @file_name and returns it.  This pixbuf is scaled
+ * from the size indicated by the file by a factor of @x_zoom and @y_zoom.  The
+ * caller must assume the reference to the returned pixbuf. If an error
+ * occurred, @error is set and %NULL is returned. Returned handle is closed by this 
+ * call and must be freed by the caller.
+ * 
+ * Return value: A newly allocated #GdkPixbuf, or %NULL
+ **/
+static GdkPixbuf  *
+rsvg_pixbuf_from_file_at_zoom_ex (RsvgHandle * handle,
+								  const gchar  *file_name,
+								  double        x_zoom,
+								  double        y_zoom,
+								  GError      **error)
+{
+	struct RsvgSizeCallbackData data;
+	
+	g_return_val_if_fail (file_name != NULL, NULL);
+	g_return_val_if_fail (x_zoom > 0.0 && y_zoom > 0.0, NULL);
+	
+	data.type = RSVG_SIZE_ZOOM;
+	data.x_zoom = x_zoom;
+	data.y_zoom = y_zoom;
+	
+	return rsvg_pixbuf_from_file_with_size_data (handle, file_name, &data, error);
+}
+
+/**
+ * rsvg_pixbuf_from_file_at_max_size_ex:
+ * @handle: The RSVG handle you wish to render with (either normal or gzipped)
+ * @file_name: A file name
+ * @max_width: The requested max width
+ * @max_height: The requested max heigh
+ * @error: return location for errors
+ * 
+ * Loads a new #GdkPixbuf from @file_name and returns it.  This pixbuf is uniformly
+ * scaled so that the it fits into a rectangle of size max_width * max_height. The
+ * caller must assume the reference to the returned pixbuf. If an error occurred,
+ * @error is set and %NULL is returned. Returned handle is closed by this call and 
+ * must be freed by the caller.
+ * 
+ * Return value: A newly allocated #GdkPixbuf, or %NULL
+ **/
+static GdkPixbuf  *
+rsvg_pixbuf_from_file_at_max_size_ex (RsvgHandle * handle,
+									  const gchar  *file_name,
+									  gint          max_width,
+									  gint          max_height,
+									  GError      **error)
+{
+	struct RsvgSizeCallbackData data;
+	
+	data.type = RSVG_SIZE_WH_MAX;
+	data.width = max_width;
+	data.height = max_height;
+	
+	return rsvg_pixbuf_from_file_with_size_data (handle, file_name, &data, error);
+}
+
+/**
+ * rsvg_pixbuf_from_file_at_zoom_with_max_ex:
+ * @handle: The RSVG handle you wish to render with (either normal or gzipped)
+ * @file_name: A file name
+ * @x_zoom: The horizontal zoom factor
+ * @y_zoom: The vertical zoom factor
+ * @max_width: The requested max width
+ * @max_height: The requested max heigh
+ * @error: return location for errors
+ * 
+ * Loads a new #GdkPixbuf from @file_name and returns it.  This pixbuf is scaled
+ * from the size indicated by the file by a factor of @x_zoom and @y_zoom. If the
+ * resulting pixbuf would be larger than max_width/max_heigh it is uniformly scaled
+ * down to fit in that rectangle. The caller must assume the reference to the
+ * returned pixbuf. If an error occurred, @error is set and %NULL is returned.
+ * Returned handle is closed by this call and must be freed by the caller.
+ * 
+ * Return value: A newly allocated #GdkPixbuf, or %NULL
+ **/
+static GdkPixbuf  *
+rsvg_pixbuf_from_file_at_zoom_with_max_ex (RsvgHandle * handle,
+										   const gchar  *file_name,
+										   double        x_zoom,
+										   double        y_zoom,
+										   gint          max_width,
+										   gint          max_height,
+										   GError      **error)
+{
+	struct RsvgSizeCallbackData data;
+	
+	g_return_val_if_fail (file_name != NULL, NULL);
+	g_return_val_if_fail (x_zoom > 0.0 && y_zoom > 0.0, NULL);
+	
+	data.type = RSVG_SIZE_ZOOM_MAX;
+	data.x_zoom = x_zoom;
+	data.y_zoom = y_zoom;
+	data.width = max_width;
+	data.height = max_height;
+	
+	return rsvg_pixbuf_from_file_with_size_data (handle, file_name, &data, error);
 }
 
 /**
@@ -155,7 +314,10 @@ GdkPixbuf *
 rsvg_pixbuf_from_file (const gchar *file_name,
 					   GError     **error)
 {
-	return rsvg_pixbuf_from_file_at_size (file_name, -1, -1, error);
+	RsvgHandle * handle = rsvg_handle_new ();
+	GdkPixbuf * pixbuf = rsvg_pixbuf_from_file_ex (handle, file_name, error);
+	rsvg_handle_free (handle);
+	return pixbuf;
 }
 
 /**
@@ -178,16 +340,10 @@ rsvg_pixbuf_from_file_at_zoom (const gchar *file_name,
 							   double       y_zoom,
 							   GError     **error)
 {
-	struct RsvgSizeCallbackData data;
-	
-	g_return_val_if_fail (file_name != NULL, NULL);
-	g_return_val_if_fail (x_zoom > 0.0 && y_zoom > 0.0, NULL);
-	
-	data.type = RSVG_SIZE_ZOOM;
-	data.x_zoom = x_zoom;
-	data.y_zoom = y_zoom;
-	
-	return rsvg_pixbuf_from_file_with_size_data (file_name, &data, error);
+	RsvgHandle * handle = rsvg_handle_new ();
+	GdkPixbuf * pixbuf = rsvg_pixbuf_from_file_at_zoom_ex (handle, file_name, x_zoom, y_zoom, error);
+	rsvg_handle_free (handle);
+	return pixbuf;
 }
 
 /**
@@ -215,18 +371,10 @@ rsvg_pixbuf_from_file_at_zoom_with_max (const gchar  *file_name,
 										gint          max_height,
 										GError      **error)
 {
-	struct RsvgSizeCallbackData data;
-	
-	g_return_val_if_fail (file_name != NULL, NULL);
-	g_return_val_if_fail (x_zoom > 0.0 && y_zoom > 0.0, NULL);
-	
-	data.type = RSVG_SIZE_ZOOM_MAX;
-	data.x_zoom = x_zoom;
-	data.y_zoom = y_zoom;
-	data.width = max_width;
-	data.height = max_height;
-	
-	return rsvg_pixbuf_from_file_with_size_data (file_name, &data, error);
+	RsvgHandle * handle = rsvg_handle_new ();
+	GdkPixbuf * pixbuf = rsvg_pixbuf_from_file_at_zoom_with_max_ex (handle, file_name, x_zoom, y_zoom, max_width, max_height, error);
+	rsvg_handle_free (handle);
+	return pixbuf;
 }
 
 /**
@@ -250,13 +398,10 @@ rsvg_pixbuf_from_file_at_size (const gchar *file_name,
 							   gint         height,
 							   GError     **error)
 {
-	struct RsvgSizeCallbackData data;
-	
-	data.type = RSVG_SIZE_WH;
-	data.width = width;
-	data.height = height;
-	
-	return rsvg_pixbuf_from_file_with_size_data (file_name, &data, error);
+	RsvgHandle * handle = rsvg_handle_new ();
+	GdkPixbuf * pixbuf = rsvg_pixbuf_from_file_at_size_ex (handle, file_name, width, height, error);
+	rsvg_handle_free (handle);
+	return pixbuf;
 }
 
 /**
@@ -279,11 +424,8 @@ rsvg_pixbuf_from_file_at_max_size (const gchar     *file_name,
 								   gint             max_height,
 								   GError         **error)
 {
-	struct RsvgSizeCallbackData data;
-	
-	data.type = RSVG_SIZE_WH_MAX;
-	data.width = max_width;
-	data.height = max_height;
-	
-	return rsvg_pixbuf_from_file_with_size_data (file_name, &data, error);
+	RsvgHandle * handle = rsvg_handle_new ();
+	GdkPixbuf * pixbuf = rsvg_pixbuf_from_file_at_max_size_ex (handle, file_name, max_width, max_height, error);
+	rsvg_handle_free (handle);
+	return pixbuf;
 }
